Added minor fix for typo

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -780,7 +780,7 @@
    "source": [
     "## Analysis\n",
     "\n",
-    "K = 11 was chosen as there is no clear elbow, and it is close to the maximum silhouette score. K = 4 and K = 14 were also candidates, 4 was considered as there is a reduction in the silhouette score gained from 4 to 5 and may be acceptable when looking for a coarser analysis of data. 14 was considered as it provides the maximum silhouette score up to K=20, however given the limited gain in score from 11 and the limited number of datapoints, 11 is a good balance to ensure clusters don't become too small (and therefore useless for analysis).\n",
+    "K = 11 was selected because the elbow curve does not show a clear point of diminishing returns, while the silhouette analysis indicates that K = 11 is close to a local maximum and provides strong cluster separation. Higher values of K, such as K = 14, yield only marginal improvements in silhouette score relative to K = 11. Given the limited size of the dataset (200 customers), increasing K beyond 11 would result in clusters that are too small to be meaningful or actionable from a business perspective. Therefore, K = 11 represents an appropriate balance between cluster quality, interpretability, and practical usefulness.\n",
     "\n",
     "### Clusters\n",
     "0: older men, medium income, medium spending\\\n",
@@ -1420,7 +1420,7 @@
    "source": [
     "### Integrated Analysis and Business Recommendations\n",
     "\n",
-    "The clustering analysis grouped customers into clear segments based on their annual income and spending score. Using K-means with K = 4 resulted in customer groups that are easy to understand and reflect real differences in purchasing behavior.\n",
+    "The clustering analysis grouped customers into clear segments based on their annual income and spending score. Using K-means with K = 11 resulted in customer groups that are easy to understand and reflect real differences in purchasing behavior.\n",
     "\n",
     "Dimensionality reduction was used to check and better interpret these clusters. The PCA plot showed some overlap between clusters, suggesting that customer behavior cannot be fully separated using simple linear relationships. However, both t-SNE and UMAP showed much clearer separation, confirming that the clusters found by K-means represent real patterns in the data. This indicates that customer behavior follows more complex, non-linear relationships.\n",
     "\n",
