added ID to anomalies

--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -1340,19 +1340,19 @@
     "\n",
     "Several anomalous customers were identified based on extreme or unusual combinations of income and spending behavior:\n",
     "\n",
-    "- **Customer A:** Age = 21, Annual Income = 15k, Spending Score = 81, Cluster = 1  \n",
+    "- **Customer 1:** Age = 21, Annual Income = 15k, Spending Score = 81, Cluster = 1  \n",
     "  This customer shows very high spending despite extremely low income, which is uncommon compared to the majority of customers.\n",
     "\n",
-    "- **Customer B:** Age = 35, Annual Income = 18k, Spending Score = 6, Cluster = 2  \n",
+    "- **Customer 6:** Age = 35, Annual Income = 18k, Spending Score = 6, Cluster = 2  \n",
     "  This customer has low income and exceptionally low spending, placing them at the lower extreme of customer engagement.\n",
     "\n",
-    "- **Customer C:** Age = 23, Annual Income = 18k, Spending Score = 94, Cluster = 8  \n",
+    "- **Customer 7:** Age = 23, Annual Income = 18k, Spending Score = 94, Cluster = 8  \n",
     "  Despite low income, this customer exhibits extremely high spending behavior, making them a strong outlier.\n",
     "\n",
-    "- **Customer D:** Age = 64, Annual Income = 19k, Spending Score = 3, Cluster = 10  \n",
+    "- **Customer 8:** Age = 64, Annual Income = 19k, Spending Score = 3, Cluster = 10  \n",
     "  This customer combines low income with minimal spending and older age, which significantly differs from typical customer patterns.\n",
     "\n",
-    "- **Customer E:** Age = 35, Annual Income = 23k, Spending Score = 98, Cluster = 8  \n",
+    "- **Customer 19:** Age = 35, Annual Income = 23k, Spending Score = 98, Cluster = 8  \n",
     "  This represents another extreme high-spending case relative to income.\n",
     "\n",
     "\n",
